# bayeserl

./: .gitignore  README  configure.ac
debian/: changelog  control  rules
src/: Makefile.am  bayeserl.app.in  bayeserl.erl  bayeserl.hrl  bayeserl.rel.in  bayeserl_memory_store.erl  bayeserl_server.erl  bayeserl_sup.erl  overview.edoc.in
